修改目录结构

--- a/view/tabChange.html
+++ b/view/tabChange.html
@@ -97,7 +97,7 @@
     </div>
 
 
-    <script type="text/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
     <script>
         $(function() {
                 // $(".changetab li").click(function() {
